--- a/p8105_hw2_rp3127.Rmd
+++ b/p8105_hw2_rp3127.Rmd
@@ -2,7 +2,7 @@
 title: "Homework 2"
 author: "rp3127"
 date: "2022/10/5"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
